--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>AZ Generator 1</title>
   </head>
   <body>
-    <script src="index.js"></script>
-    <button onclick="random_az()">Generate</button>
+    <button class="btn">Generate</button>
     <p id="p"></p>
+    <script src="index.js"></script>
   </body>
 </html>
