--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <button class="btn">Generate</button>
-    <p id="p"></p>
+    <p class="p"></p>
     <script src="index.js"></script>
   </body>
 </html>
